# study_examples

./: .gitignore  README.md
C++/CMake/Basic/: CMakeLists.txt  config.h.in  main.cpp
C++/LinuxAPI/snipets/: O_APPENDtest.c  sys_path_limits.c
C++/LinuxAPI/src/: error_functions.c  error_functions.h  get_num.h
C++/ProcessesAndThreads/Mutex/: main.cpp
C++/ProcessesAndThreads/Perils of Threads and locks-race/: CMakeLists.txt  perils.txt
C++/ProcessesAndThreads/ProcessCreation/: process.cpp
C++/Qt/Debug/: main.cpp
C++/Qt/LibTest/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
C++/Qt/LibTest/MyLib/: CMakeLists.txt  mylib.cpp  mylib.h
C++/Qt/Metaobject_information/: main.cpp  myclass.cpp  myclass.ui
C++/Qt/Object_hierarchy_organization/: Object_hierarchy_organization.pro  main.cpp  objecthierarchy.cpp  objecthierarchy.h  objecthierarchy.ui
C++/Qt/QLibraryInfo/: main.cpp
C++/Qt/QWidgets/: main.cpp
C++/Qt/QtDesigner/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
C++/Qt/QtQuick/QtQuickAndCpp/LibCppBackEnd/Source/BlueRect/: CMakeLists.txt  bluerect.cpp  bluerect.h
C++/Qt/QtQuick/QtQuickAndCpp/QQuickWidget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  qmls.qrc
C++/Qt/QtQuick/QtQuickAndCpp/QQuickWidget/Qml/: Rect.qml
C++/Qt/RegularExpressions/: main.cpp
C++/Qt/ScriptsSupport/JavaScript/JSBase/: CMakeLists.txt  main.cpp
C++/Qt/Sequence_containers/: main.cpp
C++/Qt/SettingElements/: main.cpp
C++/Qt/UnitTests/BaseTest/: CMakeLists.txt  tst_tests.cpp
C++/Qt/UnitTests/GIUTest/: CMakeLists.txt  tst_testgui.cpp
C++/Qt/UnitTests/Project/: CMakeLists.txt  main.cpp
C++/Qt/UnitTests/Project/SourceCode/: CMakeLists.txt  add.cpp  add.h  gui.cpp  gui.h
C++/Qt/UnitTests/Project/Tests/: CMakeLists.txt  tst_gui.cpp  tst_gui.h  tst_testadd.cpp  tst_testadd.h
C++/Qt/VidgetsPalette/: VidgetsPalette.pro  main.cpp
C++/Sockets/: About_server_and_client.txt
C++/Sockets/Client/: CMakeLists.txt  main.cpp
C++/Sockets/Messenger_Client/: Client.cpp  Client.h  main.cpp
C++/Sockets/Messenger_Server/: Server.cpp  Server.h  main.cpp
C++/Sockets/Server/: CMakeLists.txt  main.cpp
C++/Sockets/Server_chat/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
C++/TCPClient/: TCPClient.h  client.cpp
C++/ThreadCreation/: linux_thread.cpp
C++/Threads/Create the thread/: CMakeLists.txt  main.cpp
C++/Threads/Mutex/: CMakeLists.txt
C++/Threads/Perils of Threads and locks-race/: data_race.h  main.cpp  perils.txt
C++/WinAPI/Circle/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  baseWindow.h
C++/WinAPI/CircleByMouse/: CMakeLists.txt  MainWindow.cpp  baseWindow.h  main.cpp
C++/WinAPI/OOP_approach/: CMakeLists.txt  Main.cpp  baseWindow.h  mainWindow.cpp  mainWindow.h
C++/WinMain/: CMakeLists.txt  Main.cpp  Windows_Data_Types.txt  refernce.txt
C++/gTest/gTest_base_example/: CMakeLists.txt  main.cpp  tst_test_1.h  tst_test_2.h
HTML_CSS/Accessibe_Updatable_region/: application.js  index.html  style.css
HTML_CSS/Audio/: index.html  style.css
HTML_CSS/Aye Candy/Fonts/: index.html  style.css
HTML_CSS/Aye Candy/Rounded corners/: index.html  style.css
HTML_CSS/Aye Candy/shadows/: index.html  style.css
HTML_CSS/Canvas_logo/: application.js  index.html  style.css
HTML_CSS/Placeholder_hints/: style.css
HTML_CSS/Styling_tables_winth_pseudoclasses/: index.html  style.css
HTML_CSS/TransitionAnimation/: index.html  style.css
HTML_CSS/Video/: index.html
HTML_CSS/WebkitColumn@media/: index.html  style.css
JavaScript/: test.js  test1.js  test2.js  test4.js
JavaScript/Array/: index.html
JavaScript/Array/TwoDimensionalArray/: index.html  twoDimensionalArray.js
JavaScript/BaseJavaScript/Array/: array.js
JavaScript/BaseJavaScript/Document_variables/: helloJS.js  index.html
JavaScript/BaseJavaScript/EventDispatching/: eventdisp.js  index.html
JavaScript/BaseJavaScript/EventObject/: event.js  index.html  style.css
JavaScript/BaseJavaScript/EventSource/: event.js  index.html  style.css
JavaScript/BaseJavaScript/Functions/: index.html
JavaScript/BaseJavaScript/Objects/: index.html
JavaScript/BaseJavaScript/ObjectsAndArrays/: index.html  toStringAndValueOf.js
JavaScript/BaseJavaScript/Prototypes/: prototype.js
JavaScript/BaseJavaScript/Timers/: index.html  timer.js
JavaScript/BaseJavaScript/constructors and prototypes/: index.html
JavaScript/BaseJavaScript/documentObject/: documentMethods.js  index.html
JavaScript/BaseJavaScript/windowObject/: hello.html  index.html  load.html  windowMethods.js
JavaScript/Functions/: functions.js
JavaScript/Games/Tetris/: package-lock.json  package.json  webpack.config.js
JavaScript/Managements_instructions/: index.html
JavaScript/Managements_instructions./: instructions.js
JavaScript/Objects/: object.js
JavaScript/ObjectsAndArrays/: ArrayAndObjectsAsProperties.js  ObjectAsAssociativeArray.js
JavaScript/ObjectsUsing/try-catch/: index.html
JavaScript/Operators/: index.html  operators.js
JavaScript/Prototypes/: index.html
JavaScript/Vue/vue-first-test/: package-lock.json  package.json  webpack.config.js
JavaScript/constructors and prototypes/: constructor.js
JavaScript/hyperlinkScript/: index.html
JavaScript/jQuery/$vs$()/: example.js  index.html
JavaScript/jQuery/Attributes/: example.js
JavaScript/jQuery/Basics/: index.html
JavaScript/jQuery/DimensionsStylingCSS/: index.html
JavaScript/jQuery/ManipulatingElements/: example.js
JavaScript/jQuery/Plugins/: example.js  index.html
JavaScript/jQuery/Traversing/: example.js  index.html
JavaScript/windowObject/: .hello.html.swp  .index.html.swp  .windowMethods.js.swp  index.html  windowMethods.js
LinuxAPI/src/: get_num.c  tlpi_hdr.h
Python/Django/: Django(FileUploads)
Python/Form/: fallbacks.js  index.html  style.css
Python/MySQL/: app_specific.ini  shared.ini
Python/Placeholder_hints/: index.html
Python/Socket/: client.py  main.py
Python/snipets/: class_static_methods.py  coroutine.py  decorators.py  iterator_generator.py  memoryview.py  try_except.py  with_context_manager.py
(+1282 files in other folders)
